[package]
name = "serum_market_deploy"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "serum_market_deploy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.1"
serum_dex = { version = "*", features = ["no-entrypoint"] }
anchor-spl = "*"
bytemuck = "*"
arrayref = "*"
solana-program = "*"
spl-token = "*"